src/module/query/query-tool.component.scss
/*!/*
 * This Source Code Form is subject to the terms of the Mozilla Public
 * License, v. 2.0. If a copy of the MPL was not distributed with this
 * file, You can obtain one at https://mozilla.org/MPL/2.0/.
 */

@use "media";
@use "primary";
@use "secondary";
@use "typography";
@use "shapes";

.query-page {
    height: calc(100% - 86px);
    gap: 4px !important;

    ::ng-deep app-drag-handle span {
        display: none;
    }
}

.tp-bento-container {
    gap: 16px;
}

.tool-windows {
    flex: 0 0 360px;
}

.main-panes {
    flex: 1;
    gap: 4px !important;

    @media (max-width: media.$max-width-mobile) {
        margin-left: -8px;
    }
}

.history-pane, .query-pane, .run-pane {
    display: flex;
    flex-direction: column;
}

.run-pane mat-form-field {
    height: 100%;
}

.card {
    @include shapes.standard-border;
    border-radius: shapes.$border-radius-panel;
    @include shapes.light-source-gradient(primary.$purple, primary.$deep-purple);
    transition: background 0.1s linear;
    padding: 16px;

    &:has(.card-header-wrapper) {
        padding: 0;
    }
}

.card-header-wrapper {
    padding: 16px;

    .card-header {
        margin-bottom: 0;
    }
}

.card-header {
    display: flex;
    gap: 16px;
    align-items: center;
    margin-bottom: 12px;
    height: 32px;
}

.schema-pane {
    display: flex;
    flex-direction: column;
}

.schema-container {
    display: flex;
    overflow: auto;
    scrollbar-gutter: stable;
    overscroll-behavior: contain;

    .gutter {
        flex: 0 0 16px;
    }

    &.scrolled {
        border-top: 1px solid primary.$black-purple;
    }

    mat-tree {
        padding: 0;
        box-sizing: border-box;
        height: 100%;
        margin: 0;

        .mat-mdc-icon-button {
            margin: 0;
            padding: 0;
            width: 1em;
            height: 1em;
        }

        mat-tree-node[aria-level="3"] {
            margin-left: 32px;
            padding-left: 8px !important; /* overrides inline style from Angular Material */
            padding-right: 8px;
            align-items: stretch;
            border-bottom: 1px solid primary.$light-purple;
            border-left: 1px solid primary.$light-purple;
            border-right: 1px solid primary.$light-purple;
            font-weight: typography.$thin;

            button {
                display: none;
            }

            &:nth-child(odd) {
                background: primary.$black-purple;
            }

            &:nth-child(even) {
                background: primary.$purple;
            }
        }

        mat-tree-node[aria-level="2"] + mat-tree-node[aria-level="3"] {
            border-top: 1px solid primary.$light-purple;
        }
    }
}

mat-form-field {
    width: 100%;
}

button {
    i.fa-play {
        margin: 0;
    }

    &:enabled i.fa-play {
        color: secondary.$deep-green;
    }
}

.query-text-box {
    resize: none;
    font-family: "Monaco" !important;
    font-size: 14px !important;
    font-weight: 400 !important;
    line-height: 22px !important;
    letter-spacing: 0.02em !important;
}

.code-editor-container {
    height: 100%;
    overflow: auto;
    border: 1px solid primary.$light-purple;
    background: primary.$black-purple;

    code-editor {
        height: 100%;
    }
}

.answers-outer-container {
    height: 100%;
    width: 100%;
    border: 1px solid primary.$light-purple;
    background: primary.$black-purple;
    position: relative;
}

.answers-container {
    position: absolute;
    inset: 0;
    overflow: auto;
    scrollbar-gutter: stable;
}

.answers-structure-container {
    overflow: hidden;
}

.answers-text-container {
    mat-form-field {
        flex: 1;
        display: flex;
        flex-direction: column;
    }

    ::ng-deep .mdc-text-field,
    ::ng-deep .mat-mdc-form-field-flex,
    ::ng-deep .mat-mdc-form-field-infix {
        width: 100%;
        height: 100%;
        padding: 0;
        --mdc-outlined-text-field-container-shape: 0;
    }

    ::ng-deep .mdc-notched-outline {
        display: none;
    }

    ::ng-deep .mdc-text-field {
        --mdc-outlined-text-field-input-text-color: #{secondary.$pink};
        padding: 0;

        textarea {
            padding: 8px 14px;
        }
    }

    .answers-text-box {
        height: 100% !important;
        resize: none;
        @include typography.code;
    }
}

.status-text-container {
    width: 100%;
    height: 100%;
    display: flex;
}

.status-text {
    @include typography.p1;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 80%;
    text-align: center;
    z-index: 10; /* Ensure it's above the canvas elements */
    white-space: normal !important;
    overflow-wrap: break-word;
    padding: 10px;
    margin: 0;
}

.answers-placeholder-container {
    height: 100%;
    overflow: auto;
    border: 3px dashed primary.$light-purple;
    border-radius: shapes.$border-radius-panel;
    display: flex;
    justify-content: center;
    align-items: center;
    background: primary.$black-purple;
    --mat-button-filled-container-height: 40px;
}

#structureView {
    width: 100%;
    height: 100%;
    display: flex;
}

.history-pane {
    @media (max-width: media.$max-width-mobile) {
        display: none;
    }

    .history-container {
        height: 100%;
        width: 100%;
        overflow: auto;
    }

    ol li {
        list-style: none;
        margin-top: 8px;

        aside {
            display: flex;
            align-items: center;

            .bullet {
                margin: 0 4px;
            }

            tp-spinner {
                width: unset;
            }

            .action-status {
                margin-left: 8px;
            }

            .action-status i {
                margin-left: 6px;
                font-size: 12px;

                &.fa-xmark {
                    color: #{primary.$red};
                    cursor: pointer;
                }
            }
        }

        .mat-divider {
            margin-top: 8px;
        }
    }

    mat-form-field {
        margin-top: 4px;

        ::ng-deep .mdc-notched-outline {

        }

        textarea {
            resize: none;
            @include typography.code;
        }
    }

    .transaction-operation-type {
        min-width: 140px;
    }
}

